# gdrive-secrets-sync

./: .gitignore  LICENSE  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml
cmd/gdrive-secrets-sync/: main.go  zip.go
internal/archive/: archive.go  archive_test.go
internal/cli/: cli.go  cli_test.go
internal/config/: config.go  config_test.go
internal/domain/: domain.go
internal/drive/: client.go  client_test.go  drive.go  oauth.go  oauth_test.go
internal/syncer/: syncer.go  syncer_test.go
src/gdrive_secrets_sync/: cli.py  config.py  drive.py
